# lightningGames

./: .gitignore  .npmrc  AGENTS.md  BUN_README.md  LICENSE  LightningBuildUI.bat  LightningBuildUI_Native.bat  OPTIMIZATION_SUMMARY.md  README.md  context.md  imgui.ini  index.html  main.js  package.json  plan.md  preload.js  run-build.js  tailwind.config.js
Docs/: ANIMATION_STARTUP_FIX_COMPLETE.md  BUILD_ARTIFACTS_ARCHIVE.md  BUILD_ARTIFACTS_FEATURE.md  BUILD_DOCS_INDEX.md  BUILD_OPTIMIZATION.md  BUILD_QUICK_START.md  BUILD_SYSTEM_FINAL.md  BUILD_SYSTEM_STATUS.md  BUILD_WIZARD_COMPLETE.md  BUN_MIGRATION_COMPLETE.md  BUN_MIGRATION_GUIDE.md  COMPLETION_REPORT.md  CONTINUATION_SESSION_COMPLETE.md  DETAILED_LOGGING_IMPLEMENTATION.md  DIFFICULTY_AND_SELECT_FIX.md  DIFFICULTY_DEBUG_GUIDE.md  DIFFICULTY_FINAL_IMPLEMENTATION.md  DIFFICULTY_FIX_COMPLETE.md  DIFFICULTY_SYSTEM_VERIFICATION.md  ENHANCED_SETTINGS_MENU_v2.md  EXAMPLE_BUILD_LOG.md  EXTREME_MODE_BALANCE.md  EXTREME_MODE_FINAL.md  FEATURES_EXPANSION_COMPLETE.md  FEATURES_UPDATE_SUMMARY.md  GPU_ACCELERATION_COMPLETE.md  GPU_ACCELERATION_OPTIMIZATION.md  IMPLEMENTATION_CHECKLIST.md  LATEST_FIXES_SUMMARY_v3.8.md  LATEST_UPDATES_v3.4.md  LINUX_BUILD_COMPLETE_FIX.md  LINUX_BUILD_DOCKER.md  LINUX_BUILD_ERROR_126_FINAL_FIX.md  LINUX_BUILD_ERROR_126_FIX.md  LINUX_BUILD_ERROR_126_FIXED.md  LINUX_BUILD_ERROR_126_ROOT_CAUSE.md  LINUX_BUILD_ERROR_127_FIX.md  LINUX_BUILD_ERROR_127_FIXED.md  LINUX_BUILD_FINAL_FIX.md  LINUX_BUILD_FINAL_SOLUTION.md  (+53 more)
build-ui/: CMakeLists.txt  crash_log.txt  imgui.ini  mingw-toolchain.cmake  setup-win.sh  setup.sh
build-ui/src/: app.cpp  app.h  app.rc  build_runner.cpp  build_runner.h  dpi.manifest  main.cpp
docs-gitbook/: README.md  SUMMARY.md
games/: asteroids.js  ballblast.js  battlecards.js  blaster.js  blockdash.js  bouncer.js  bouncy.js  breakout.js  bubbleshooter.js  colormatcher.js  colorrush.js  colorswitch.js  cubefall.js  cyberdash.js  doodlejump.js  doom3d.js  flappy.js  (+44 more)
(+39 files in other folders)
